[project]
name = "fitnessapp"
version = "0.1.0"
description = "Minimal workout timer built with Flet."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet==0.82.2",
]

[tool.flet]
product = "极简健身计时器"

[tool.flet.app]
module = "main"
exclude = [
    ".git",
    ".github",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.flet.android]
split_per_abi = true

[tool.flet.android.permission]
"android.permission.WAKE_LOCK" = true

[tool.flet.cleanup]
app = true
